kuberesources/ingressAppGw.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  name: myweb-appgw
spec:
  rules:
    - host: mujkube123.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myweb-service
              servicePort: 80
